chore : Spring Boot 2.7 & JAVA 11 버전 변경 ElasticSearch 및 Cassandra 사용이 최신 스프링 부트, 자바 버전에서 호환이 되지 않기에 버전 변경이 불가피하게 됨